--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 transformers==4.25.1
-torch==1.13.1
 Flask==2.2.2
-spacy==3.4.4
 pandas==1.4.4
+spacy>=3.6.0  # Choose a version of spacy that's compatible with your Python version
