--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cloudpathlib==0.20.0
 colorama==0.4.6
 confection==0.1.5
 cymem==2.0.8
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 filelock==3.16.1
 Flask==3.0.3
 fsspec==2024.10.0
@@ -24,13 +25,17 @@ marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mpmath==1.3.0
 murmurhash==1.0.10
+networkx==3.4.2
 nltk==3.9.1
 numpy==2.0.2
 packaging==24.1
 pandas==2.2.3
+pillow==11.0.0
 preshed==3.0.9
 prettytable==3.11.0
+protobuf==5.28.3
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
@@ -41,6 +46,7 @@ regex==2024.9.11
 requests==2.32.3
 rich==13.9.3
 safetensors==0.4.5
+sentencepiece==0.2.0
 setuptools==75.2.0
 shellingham==1.5.4
 six==1.16.0
@@ -50,8 +56,13 @@ spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 SQLAlchemy==2.0.36
 srsly==2.4.8
+sympy==1.13.1
 thinc==8.3.2
+tiktoken==0.8.0
 tokenizers==0.20.1
+torch==2.5.0
+torchaudio==2.5.0
+torchvision==0.20.0
 tqdm==4.66.5
 transformers==4.46.0
 typer==0.12.5
