--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+altair==5.4.1
 annotated-types==0.7.0
+attrs==24.2.0
 blinker==1.8.2
 blis==1.0.1
+cachetools==5.5.0
 catalogue==2.0.10
 certifi==2024.8.30
 charset-normalizer==3.4.0
@@ -13,12 +16,16 @@ en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_
 filelock==3.16.1
 Flask==3.0.3
 fsspec==2024.10.0
+gitdb==4.0.11
+GitPython==3.1.43
 greenlet==3.1.1
 huggingface-hub==0.26.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 langcodes==3.4.1
 language_data==1.2.0
 marisa-trie==1.2.1
@@ -27,42 +34,52 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 mpmath==1.3.0
 murmurhash==1.0.10
+narwhals==1.10.0
 networkx==3.4.2
 nltk==3.9.1
 numpy==2.0.2
 packaging==24.1
 pandas==2.2.3
-pillow==11.0.0
+pillow==10.4.0
 preshed==3.0.9
 prettytable==3.11.0
 protobuf==5.28.3
+pyarrow==17.0.0
 pydantic==2.9.2
 pydantic_core==2.23.4
+pydeck==0.9.1
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
+referencing==0.35.1
 regex==2024.9.11
 requests==2.32.3
 rich==13.9.3
+rpds-py==0.20.0
 safetensors==0.4.5
 sentencepiece==0.2.0
 setuptools==75.2.0
 shellingham==1.5.4
 six==1.16.0
 smart-open==7.0.5
+smmap==5.0.1
 spacy==3.8.2
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 SQLAlchemy==2.0.36
 srsly==2.4.8
+streamlit==1.39.0
 sympy==1.13.1
+tenacity==9.0.0
 thinc==8.3.2
 tiktoken==0.8.0
 tokenizers==0.20.1
+toml==0.10.2
 torch==2.5.0
 torchaudio==2.5.0
 torchvision==0.20.0
+tornado==6.4.1
 tqdm==4.66.5
 transformers==4.46.0
 typer==0.12.5
@@ -70,6 +87,7 @@ typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 wasabi==1.1.3
+watchdog==5.0.3
 wcwidth==0.2.13
 weasel==0.4.1
 Werkzeug==3.0.4
