--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
+accelerate==1.2.0
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.10
+aiosignal==1.3.1
 altair==5.4.1
 annotated-types==0.7.0
+async-timeout==5.0.1
 attrs==24.2.0
+babel==2.16.0
+bitsandbytes==0.42.0
 blinker==1.8.2
 blis==1.0.1
 cachetools==5.5.0
@@ -12,10 +19,17 @@ cloudpathlib==0.20.0
 colorama==0.4.6
 confection==0.1.5
 cymem==2.0.8
+datasets==3.2.0
+dill==0.3.8
+docopt==0.6.2
+editdistance==0.8.1
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+et_xmlfile==2.0.0
+evaluate==0.4.3
 filelock==3.16.1
 Flask==3.0.3
-fsspec==2024.10.0
+frozenlist==1.5.0
+fsspec==2024.9.0
 gitdb==4.0.11
 GitPython==3.1.43
 greenlet==3.1.1
@@ -33,33 +47,41 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
 murmurhash==1.0.10
 narwhals==1.10.0
 networkx==3.4.2
 nltk==3.9.1
 numpy==2.0.2
+openpyxl==3.1.5
 packaging==24.1
 pandas==2.2.3
 pillow==10.4.0
 preshed==3.0.9
 prettytable==3.11.0
+propcache==0.2.1
 protobuf==5.28.3
-pyarrow==17.0.0
+psutil==6.1.0
+pyarrow==18.1.0
 pydantic==2.9.2
 pydantic_core==2.23.4
 pydeck==0.9.1
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
+records==0.6.0
 referencing==0.35.1
 regex==2024.9.11
 requests==2.32.3
 rich==13.9.3
 rpds-py==0.20.0
 safetensors==0.4.5
+scikit-learn==1.6.0
+scipy==1.14.1
 sentencepiece==0.2.0
-setuptools==75.2.0
 shellingham==1.5.4
 six==1.16.0
 smart-open==7.0.5
@@ -68,11 +90,15 @@ spacy==3.8.2
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 SQLAlchemy==2.0.36
+sqlparse==0.5.2
 srsly==2.4.8
 streamlit==1.39.0
 sympy==1.13.1
+tablib==3.7.0
+tabulate==0.9.0
 tenacity==9.0.0
 thinc==8.3.2
+threadpoolctl==3.5.0
 tiktoken==0.8.0
 tokenizers==0.20.1
 toml==0.10.2
@@ -91,5 +117,6 @@ watchdog==5.0.3
 wcwidth==0.2.13
 weasel==0.4.1
 Werkzeug==3.0.4
-wheel==0.44.0
 wrapt==1.16.0
+xxhash==3.5.0
+yarl==1.18.3
